implementa unit tests, fix bug